played around with select form layout

--- a/project/templates/typesetting_form.html
+++ b/project/templates/typesetting_form.html
@@ -7,16 +7,16 @@
         <form action="POST" class="form-control">
             <div class="row">
                 {{ form.hidden_tag() }}
-        
+
                 <div class="col-md-3 mb-15">
-                    
+
                     {{ form.primary_typeface.label }}
-                    {{ form.primary_typeface(class_="form-control form-control-select") }}
-        
+                    {{ form.primary_typeface(class_="form-control form-select") }}
+
                 </div><!-- / column -->
 
             </div>
-        
+
         </form>
     </div>
 </div>
