started second form

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -19,6 +19,7 @@
 
 
     <!-- Fonts -->
+    {% block styles %} {% endblock %}
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;600;800&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap">
     <link rel="stylesheet" href="/static/css/fontawesome-all.min.css" type="text/css">
