more typesetting form style edits

--- a/project/templates/typesetting_form.html
+++ b/project/templates/typesetting_form.html
@@ -6,6 +6,10 @@
 {% block content %}
 <section class="med">
     <div class="container mt-40">
+        <div class="section-title-area mb-50">
+            <h3 class="section-title">Style Guide<span class="text-primary"> Typesetting</span></h3>
+            <h5 class="section-sub-title">Now we'll set the typeface styles for all the headings and text.</h5>
+        </div>
         <div class="row justify-content-between align-items-start mt-20">
             <div class="col-md-5">
                 <div class="row">
@@ -36,18 +40,8 @@
 </section>
 
 
-<section class="lg">
-    <div class="container">
-        <div class="section-title-area mb-50">
-            <h3 class="section-title">Style Guide<span class="text-primary"> Typesetting</span></h3>
-            <h5 class="section-sub-title">Now we'll set the typeface styles for all the headings and text.</h5>
-        </div>
-        <!-- <div class="row mb-20">
-            <h5>Style Guide Typesetting</h5>
-            <p class="lead">
-                Now we'll set the typeface styles for all the headings and text
-            </p>
-        </div> -->
+
+    <div class="container mt-20">
         <div class="promo-box">
             <div class="row">
                 <form action="POST" class="">
@@ -84,7 +78,7 @@
             </div>
         </div>
     </div>
-</section>
+
 
 
 {% endblock %}
