--- a/project/templates/style_guide_new.html
+++ b/project/templates/style_guide_new.html
@@ -4,8 +4,21 @@
     <div class="container">
         <div class="promo-box">
             <div class="row">
-                <form action="POST" class="">
+                <form method="POST" class="">
                     {{ form.hidden_tag() }}
+
+                    <div class="row justify-content-between mb-50">
+                        <div class="col-md-5">
+                            <h5>Style Guide Title</h5>
+                            <p class="lead">
+                                Choose a unique and descriptive title for your style guide.
+                            </p>
+                        </div>
+                    
+                        <div class="col-md-5">
+                            {{ form.title(class_="form-control mb-10", placeholder=form.title.label.text) }}
+                        </div><!-- / column -->
+                    </div><!-- / row -->
 
                     <div class="row justify-content-between">
                         <div class="col-md-5">
