--- a/project/templates/user_profile.html
+++ b/project/templates/user_profile.html
@@ -35,7 +35,7 @@
                                             </h4>
                                             <p class="mb-0 text-sm text-primary">Style Guides</p>
                                         </div><!-- / d-inline-block -->
-                                        <a href="" class="mt-30 btn btn-lg btn-primary pill m-10 ml-0">
+                                        <a href="/users/{{ user.username }}/style-guide/new" class="mt-30 btn btn-lg btn-primary pill m-10 ml-0">
                                             <i class="fas fa-plus mr-5"></i>
                                             Make A New Style Guide</a>
                                     </div><!-- / column -->
