--- a/project/templates/style_guide_typesetting.html
+++ b/project/templates/style_guide_typesetting.html
@@ -1,6 +1,19 @@
 {% extends 'base.html' %}
 {% block styles %} 
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;600;800&display=swap">
+
+<style type="text/css">
+    .primary-typeface-set {
+        font-family: "{{style_guide.primary_typeface}}";
+    }
+
+    .typeface-weight-set {
+        font-family: "{{style_guide.primary_typeface}}";
+    }
+</style>
+
+{% for variant in variants %}
+    <link rel="stylesheet" href={{variant.url}}>
+{% endfor %}
 
 {% endblock %}
 
@@ -14,7 +27,9 @@
         <div class="row justify-content-between align-items-start mt-20">
             <div class="col-md-5">
                 <div class="row">
-                    <div class="primary-typeface-set">{{ style_guide.primary_typeface }}</div>
+                    <div class="primary-typeface-set">
+                        {{ style_guide.primary_typeface }}
+                    </div>
                     <div style="color: #b1b8d8;">Primary Typeface</div>
                 </div>
                 
@@ -22,6 +37,7 @@
 
             <div class="col-md-6">
                 <div class="row justify-content-between">
+
                     <div class="col-6 col-md-3">
                         <span class="typeface-weight-set">Aa</span>
                     </div>
@@ -50,10 +66,9 @@
     
                     <div class="row align-items-center justify-content-between ">
                         <div class="col-md-5 pl-60">
-                            <h6>Body <span class="text-primary">P</span></h6>
+                            <h6>{{ style_ref.name }} <span class="text-primary text-uppercase">{{ style_ref.id }}</span></h6>
                             <p class="">
-                                This is your largest typesetting. Display headers are mostly used for Splash headings and Modal
-                                titles.
+                                {{ style_ref.description }}
                             </p>
                         </div>
     
