--- a/project/templates/user_profile.html
+++ b/project/templates/user_profile.html
@@ -59,18 +59,18 @@
             <li class="col-md-4 project">
                 <div class="card">
                     <div class="card-body p-y-30 text-center">
-                        <img class="img-responsive mb-20" src="../static/images/placeholder-mini.jpg" alt="">
+                        <div class="wrapper">
+                            <div class="accent-1-box">a-1</div>
+                            <div class="accent-2-box">a-2</div>
+                            <div class="primary-dark-box">p-dark</div>
+                            <div class="primary-light-box">p-light</div>
+                        </div>
                         <a href="" class="card-title title-link primary-hover fs-20">{{ style_guide.title }}</a>
-                        <p class="card-text mt-10 mb-10">Suspendisse in orci vitae sapien semper posuere. Mauris a gravida
-                            lacus...
-                        </p>
                         <p class="fs-12 post-meta-small mt-15 mb-0"><i class="far fa-calendar-alt mr-5"></i>{{ style_guide.timestamp.strftime("%B %d, %Y") }}</p>
                     </div><!-- / card-body -->
                 </div><!-- / card -->
             </li><!-- / style guide -->
             {% endfor %}
-        
-            
         </ul>
     </div>
 </section>
