--- a/project/templates/style_guide_typesetting.html
+++ b/project/templates/style_guide_typesetting.html
@@ -56,7 +56,7 @@
     <div class="container mt-20">
         <div class="promo-box">
             <div class="row">
-                <form action="POST" class="">
+                <form method="POST" class="">
                     {{ form.hidden_tag() }}
     
                     <div class="row align-items-center justify-content-between ">
