color scheme form submits to db

--- a/project/templates/style_guide_color_scheme.html
+++ b/project/templates/style_guide_color_scheme.html
@@ -34,7 +34,7 @@
                         </div><!-- / column -->
 
                         <div class="col-md-6 mb-15">
-                            {{ form.primary_light(class_="form-control color-picker-box", type_="color", value_="#F2F2F2") }}
+                            {{ form.primary_light(class_="form-control color-picker-box", type_="color") }}
                             {{ form.primary_light.label(class_="form-label mt-10 pl-20 lead")}}
                         </div><!-- / column -->
                     </div><!-- / row -->
@@ -52,13 +52,13 @@
                 <div class="col-md-6">
                     <div class="row justify-content-between">
                         <div class="col-md-6 mb-15">
-                            {{ form.accent_1(class_="form-control color-picker-box", type_="color", value_="#94C6F2") }}
+                            {{ form.accent_1(class_="form-control color-picker-box", type_="color") }}
                             {{ form.accent_1.label(class_="form-label mt-10 pl-20 lead")}}
 
                         </div><!-- / column -->
 
                         <div class="col-md-6 mb-15">
-                            {{ form.accent_2(class_="form-control color-picker-box", type_="color", value_="#F2EEAC") }}
+                            {{ form.accent_2(class_="form-control color-picker-box", type_="color") }}
                             {{ form.accent_2.label(class_="form-label mt-10 pl-20 lead")}}
 
                         </div><!-- / column -->
