--- a/project/templates/style_guide_typesetting.html
+++ b/project/templates/style_guide_typesetting.html
@@ -4,10 +4,12 @@
 <style type="text/css">
     .primary-typeface-set {
         font-family: "{{style_guide.primary_typeface}}";
+        color: #c9d0f4;
     }
 
     .typeface-weight-set {
         font-family: "{{style_guide.primary_typeface}}";
+        color: #c9d0f4;
     }
 
 </style>
